--- a/dom_typecasting/public/index.html
+++ b/dom_typecasting/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,82 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css
     ">
 </head>
+
 <body>
-    <div class="container">
-        <h2 class="text-center fw-bold my-2">Annual Employee Income </h2>
-        <form action="" id="formIncome">
-            <div class="mb-3">
-                <label for="ename" class="form-label">Employee Name</label>
-                <input type="text" class="form-control" id="ename" placeholder="name">
-              </div>
-              <button type="submit" class="btn btn-primary btn-sm">Add</button>
-        </form>
+    <div class="container-fluid p-5">
+        <h2 class="text-center fw-bold mb-5">Annual Employee Income Calculate</h2>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <form action="" id="formIncome">
+                    <div id="formWrap" class="bg-light shadow p-3">
+                        <div class="input-group mb-3">
+                            <label class="input-group-text" for="">Employee Name</label>
+                            <input type="text" class="form-control inputFields" id="ename" placeholder="name">
+                            <label class="input-group-text">Role</label>
+                            <input type="text" class="form-control inputFields" id="erole" placeholder="role">
+                        </div>
+                        <div class="input-group mb-3">
+                            <label class="input-group-text" for="">Hourly Pay $</label>
+                            <input type="number" class="form-control inputFields" id="ehpayrate"
+                                placeholder="how much pay">
+                            <label class="input-group-text">Work Hours/Days</label>
+                            <input type="text" class="form-control inputFields" id="eworkhourday"
+                                placeholder="working hour">
+                        </div>
+                        <div class="input-group mb-3">
+                            <label class="input-group-text">Work Days/week</label>
+                            <input type="text" class="form-control inputFields" id="ewdayweek"
+                                placeholder="working day">
+                            <label class="input-group-text" for="">No weeks worked/year</label>
+                            <input type="number" class="form-control inputFields" id="enoweekyear" value="50"
+                                placeholder="how much pay">
+                        </div>
+                        <div class="input-group mb-3">
+                            <label class="input-group-text">Bonuses + Overtime/Yearly</label>
+                            <input type="text" class="form-control inputFields" id="ebovertime"
+                                placeholder="Bonuses/Overtime">
+                        </div>
+                    </div>
+                    <p class="text-end my-2">
+                        <button type="submit" class="btn btn-primary btn-sm shadow calcEmpBtn">Calculate</button>
+                    </p>
+                </form>
+            </div>
+            <div class="col-12 col-md-6 shadow-sm">
+                <h4>Employee List</h4>
+                <table class="table table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Role</th>
+                            <th scope="col">Hourly</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td colspan="2">Larry the Bird</td>
+                            <td>@twitter</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
+
 </html>
