--- a/dom_typecasting/public/index.html
+++ b/dom_typecasting/public/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <p class="text-end my-2">
-                        <button type="submit" class="btn btn-primary btn-sm shadow calcEmpBtn">Calculate</button>
+                        <button type="button" class="btn btn-primary btn-sm shadow calcEmpBtn">Calculate</button>
                     </p>
                 </form>
             </div>
