--- a/superHero-landing-page/public/index.html
+++ b/superHero-landing-page/public/index.html
@@ -35,6 +35,14 @@
       <button class="">&#9896;</button>
     </div>
   </main>
+  <div class="preloader d-none" id="preloader">
+    <div class="preloader-inner">
+      <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
+      </div>
+    </div>
+  </div>
   <script type="module" src="./app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
